--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-preset-solid": "^1.5.7",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
-    "solid-js": "^1.5.1"
+    "solid-js": "^1.5.7"
   }
 }
