--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "babel-preset-solid": "^1.5.7",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
   },
